--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -208,7 +208,7 @@ textarea {
   /* 1 */
   font: inherit;
   /* 2 */
-  margin: 0;
+  margin: 0.3em;
   /* 3 */ }
 
 /**
@@ -451,7 +451,7 @@ i[class*=" icon-"]:before {
 button,
 .button,
 [type=submit], .dropimage {
-  margin: 0.3em 0;
+  margin: 0.3em 0.3em;
   cursor: pointer;
   transition: all 0.3s;
   border-radius: 0.2em;
